# opengl_cmake_template

./: .gitignore  CMakeLists.txt  justfile  main.cpp
include/: log.h
src/: log.cpp
